# autosampler

./: .gitignore  README.md
.github/workflows/: ubuntu.yml
source/: CMakeLists.txt  base.cmake  build_win64.bat  gen_win64.bat
source/asBase/: CMakeLists.txt  logging.h
source/asCliLib/: CMakeLists.txt  cli.cpp  cli.h  commandline.cpp  commandline.h  main.cpp
source/asLib/: CMakeLists.txt  audioData.cpp  audioData.h  autosampler.cpp  autosampler.h  error.h  wavWriter.cpp
source/base/: CMakeLists.txt  logging.cpp  logging.h
source/cli/: CMakeLists.txt  cli.cpp  cli.h  commandline.cpp  commandline.h
source/lib/: CMakeLists.txt  audioData.cpp  audioData.h  autosampler.cpp  autosampler.h  config.h  error.h  midiTypes.h  wavWriter.cpp  wavWriter.h
source/portmidi/: CMakeLists.txt
source/portmidi/pm_common/: CMakeLists.txt
